<resources>
    <string name="app_name">MatematicasAplicacion</string>
    <string name="funcion">∫dx√x</string>
    <string name="bienvenida">Bienvenido</string>
    <string name="perfil">crear Perfil</string>
    <string name="comenzar">Comenzar</string>
    <string name="salir">Salir</string>

    <!--Definimos las variables para el activity  de perfil-->
    <string name="titulo">Datos Personales</string>
    <string name="nombres">Ingresa tu nombre</string>
    <string name="apellidos">Ingresa tu apellido</string>
    <string name="correo">Ingresa tu correo electrónico</string>
    <string name="title_activity_perfil">Perfil</string>
    <string name="logo">logotipo</string>

    <!--Definimos los strings para la pantalla de las Opciones-->
    <string name="simplificar">Simplificar ecuación de 1° grado.</string>
    <string name="resolver">Resolver ecuación de 1° grado.</string>
    <string name="Radical">Resolver ecuación con radical.</string>
    <string name="cuadratica">Resolver ecuación cuadrática.</string>
    <string name="textview"/>

    // definimos los sings que seran utilizados en los calculos
    <string name="items">123</string>
    <string name="ingreso">Ingresa # items en la ecuación:</string>
    <string name="Uno">#1</string>
    <string name="Dos">#2</string>
    <string name="Tres">#3</string>
    <string name="Cuatro">#4</string>
    <string name="Cinco">#5</string>
    <string name="Seis">#6</string>
    <string name="Siete">#7</string>
    <string name="Ocho">#8</string>
    <string name="Nueve">#9</string>
    <string name="Diez">#10</string>
    <string name="Once">#11</string>
    <string name="Doce">#12</string>
    <string name="Resultado"></string>
    <string name="variable">x/y</string>
    <string name="signo">+/-</string>
    <string name="calcular">Calcular</string>
    <string name="Limpiar">Limpiar</string>
    <string name="Generar">Generar</string>

    //definimos los valores de resolver cuadratica.
    <string name="ingresaValores">Ingresa los valores de la ecuación: </string>
    <string name="a">ax2</string>
    <string name="b">bx</string>
    <string name="c">c</string>

    //definimos para tomar foto
    <string name="tomarFoto">Tomar Foto</string>

</resources>
