<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Cuadratica">

    <EditText
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:inputType="numberSigned"
            android:ems="10"
            android:id="@+id/txtTercero" android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            android:hint="@string/c"
            android:importantForAutofill="no" tools:targetApi="o" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
            app:layout_constraintStart_toEndOf="@+id/txtSegundo" android:layout_marginStart="25dp"
            android:layout_marginLeft="25dp" app:layout_constraintHorizontal_bias="0.0"/>
    <EditText
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:inputType="numberSigned"
            android:ems="10"
            android:id="@+id/txtSegundo" android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            android:hint="@string/b"
            android:importantForAutofill="no"
            tools:targetApi="o" app:layout_constraintStart_toEndOf="@+id/txtPrimero" android:layout_marginStart="25dp"
            android:layout_marginLeft="25dp"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/descarga"
            android:id="@+id/ivLogo" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:contentDescription="@string/logo"/>
    <TextView
            android:text="@string/textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtTitulo" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/ivLogo" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:contentDescription="@string/titulo"/>
    <TextView
            android:text="@string/ingresaValores"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/txtTitulo" app:layout_constraintHorizontal_bias="0.023"/>
    <EditText
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:inputType="numberSigned"
            android:ems="10"
            android:id="@+id/txtPrimero" android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp" android:hint="@string/a"
            android:importantForAutofill="no" tools:targetApi="o"/>
    <TextView
            android:layout_width="232dp"
            android:layout_height="24dp"
            android:id="@+id/txtResultado" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/txtSegundo" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.0"
            android:contentDescription="@string/textview" android:textStyle="bold" android:textSize="18sp"/>
    <Button
            android:text="@string/calcular"
            android:layout_width="126dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnCalcular" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="12dp" app:layout_constraintTop_toBottomOf="@+id/txtResultado2"/>
    <Button
            android:text="@string/Limpiar"
            android:layout_width="126dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnLimpiar" app:layout_constraintStart_toEndOf="@+id/btnCalcular"
            android:layout_marginLeft="22dp" android:layout_marginStart="22dp"
            android:layout_marginTop="12dp" app:layout_constraintTop_toBottomOf="@+id/txtResultado2"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.046"/>
    <TextView
            android:text="@string/textview"
            android:id="@+id/txtResultado2"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="172dp" android:layout_marginRight="172dp"
            android:layout_width="232dp" android:layout_height="25dp" android:textStyle="bold" android:textSize="18sp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/txtResultado"
            android:layout_marginStart="9dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="9dp" app:layout_constraintHorizontal_bias="0.0"/>
</android.support.constraint.ConstraintLayout>