<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".calculos">
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/descarga"
            android:id="@+id/ivLogo" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:contentDescription="@string/logo"/>
    <TextView
            android:text="@string/textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtOpcion" android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/ivLogo" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"/>
    <TextView
            android:text="@string/ingreso"
            android:layout_width="201dp"
            android:layout_height="19dp"
            android:id="@+id/txtMensaje" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="1dp"
            android:layout_marginStart="1dp" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/txtOpcion" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="3dp" android:layout_marginRight="3dp"
            app:layout_constraintHorizontal_bias="0.038"
    />
    <EditText
            android:layout_width="43dp"
            android:layout_height="42dp"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/txtCantidad" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toEndOf="@+id/txtMensaje" android:layout_marginLeft="2dp"
            android:layout_marginStart="2dp" app:layout_constraintTop_toBottomOf="@+id/txtOpcion"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="5dp" android:hint="@string/items"
            android:textStyle="bold" android:importantForAutofill="no" tools:targetApi="o"/>
    <EditText
            android:layout_width="55dp"
            android:layout_height="40dp"
            android:inputType="numberSigned"
            android:ems="10"
            android:id="@+id/txtNumero1"
            android:hint="@string/Uno" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/txtMensaje" android:layout_marginStart="1dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="1dp"
            android:importantForAutofill="no" tools:targetApi="o"/>
    <EditText
            android:layout_width="30dp"
            android:layout_height="40dp"
            android:inputType="textPersonName"
            android:text="@string/textview"
            android:ems="10"
            android:id="@+id/txtVariable"
            app:layout_constraintStart_toEndOf="@+id/txtNumero1"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/txtMensaje" android:hint="@string/variable"
            android:textSize="15sp" android:importantForAutofill="no" tools:targetApi="o"/>
    <Spinner
            android:layout_width="30dp"
            android:layout_height="40dp"
            android:id="@+id/spSigno" app:layout_constraintStart_toEndOf="@+id/txtVariable"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/txtMensaje"/>
</android.support.constraint.ConstraintLayout>