<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Perfil">

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/descarga"
            android:id="@+id/ivImagen" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" android:contentDescription="@string/logo"
            app:layout_constraintHorizontal_bias="0.459"/>
    <EditText
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txtNombre" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginTop="88dp"
            app:layout_constraintTop_toBottomOf="@+id/ivImagen" android:hint="@string/nombres"
            android:importantForAutofill="no" tools:targetApi="o" app:layout_constraintHorizontal_bias="0.507"
            android:textColorLink="@color/LinkColor"/>
    <EditText
            android:layout_width="334dp"
            android:layout_height="45dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txtApellido" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txtNombre"
            android:layout_marginTop="16dp"
            android:hint="@string/apellidos" android:importantForAutofill="no" tools:targetApi="o"
            app:layout_constraintHorizontal_bias="0.54" android:textColorLink="@color/LinkColor"/>
    <EditText
            android:layout_width="334dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/txtCorreo" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.54" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/txtApellido" android:importantForAutofill="no"
            android:hint="@string/correo" tools:targetApi="o" android:textColorLink="@color/LinkColor"/>
    <Button
            android:text="@string/comenzar"
            android:layout_width="332dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnComenzar" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/txtCorreo" app:layout_constraintHorizontal_bias="0.555"
            android:textStyle="bold" android:textColor="@android:color/background_light"
            android:background="@color/colorPrimary"/>
    <TextView
            android:text="@string/titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtTitulo" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginTop="28dp"
            app:layout_constraintTop_toBottomOf="@+id/ivImagen" android:textStyle="bold"
            android:textSize="18sp" android:textColor="@color/colorText"/>
</android.support.constraint.ConstraintLayout>