<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".opciones">

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/descarga"
            android:id="@+id/ivLogotipo" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:contentDescription="@string/logo"/>
    <Button
            android:text="@string/simplificar"
            android:layout_width="340dp"
            android:layout_height="60dp"
            android:id="@+id/btnSimplificarExpresion" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.509" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/tvNombre"/>
    <Button
            android:text="@string/resolver"
            android:layout_width="340dp"
            android:layout_height="60dp"
            android:id="@+id/btnResolverEcuacion"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/btnSimplificarExpresion"
            app:layout_constraintHorizontal_bias="0.501"/>
    <Button
            android:text="@string/Radical"
            android:layout_width="340dp"
            android:layout_height="60dp"
            android:id="@+id/btnResolverRadical" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/btnResolverEcuacion"/>
    <Button
            android:text="@string/cuadratica"
            android:layout_width="340dp"
            android:layout_height="60dp"
            android:id="@+id/btnResolverCuadratica" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/btnResolverRadical" app:layout_constraintHorizontal_bias="0.501"/>
    <TextView

            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvNombre" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/ivLogotipo" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.509" android:textStyle="bold"
            android:textSize="16sp"/>
</android.support.constraint.ConstraintLayout>