<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/funcion"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/tvFuncion" android:textSize="60sp" android:layout_marginTop="4dp"
            app:layout_constraintHorizontal_bias="0.498" android:textStyle="bold" android:textColor="@color/colorText"/>
    <TextView
            android:text="@string/bienvenida"
            android:layout_width="258dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvBienvenida" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" android:layout_marginTop="132dp"
            app:layout_constraintTop_toBottomOf="@+id/tvFuncion" android:textColor="@color/colorText"
            android:textSize="40sp" app:layout_constraintHorizontal_bias="0.583" android:textStyle="bold"/>
    <Button
            android:text="@string/perfil"
            android:layout_width="258dp"
            android:layout_height="51dp"
            android:id="@+id/btnPerfil"
            app:layout_constraintTop_toBottomOf="@+id/tvBienvenida" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.496" android:background="@color/colorButton"
            android:textColor="@android:color/background_light" android:layout_marginTop="4dp"/>
    <Button
            android:text="@string/comenzar"
            android:layout_width="258dp"
            android:layout_height="51dp"
            android:id="@+id/btnComenzar" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/btnPerfil" app:layout_constraintHorizontal_bias="0.496"
            android:background="@color/colorPrimary" android:textColor="@android:color/background_light"
            android:layout_marginTop="16dp"/>
    <Button
            android:text="@string/salir"
            android:layout_width="258dp"
            android:layout_height="51dp"
            android:id="@+id/btnSalir" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/btnComenzar" app:layout_constraintHorizontal_bias="0.496"
            android:background="@color/colorAccent" android:textColor="@android:color/background_light"
            android:layout_marginTop="16dp"/>
    <ImageView
            android:layout_width="115dp"
            android:layout_height="108dp" app:srcCompat="@drawable/descarga"
            android:id="@+id/ivPresentacion" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/tvBienvenida" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tvFuncion" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/perfil" app:layout_constraintVertical_bias="0.117"
    />

</android.support.constraint.ConstraintLayout>